feat: Add device_model_count (#10)
* feat: Add device_model_count

* ci: Generate code

* Fix test

* ci: Format code

* Do not return device_model_count inside DeviceModelV1.manufacturer

---------
