# src/route-types.ts
@@ -340,6 +340,7 @@ export type Routes = {
         integration: "stable" | "beta" | "planned" | "unsupported" | "inquire"
         is_connect_webview_supported: boolean
         requires_seam_support_to_add_account: boolean
+        device_model_count: number
       }
     }
   }
@@ -369,6 +370,7 @@ export type Routes = {
         integration: "stable" | "beta" | "planned" | "unsupported" | "inquire"
         is_connect_webview_supported: boolean
         requires_seam_support_to_add_account: boolean
+        device_model_count: number
       }[]
     }
   }
